setting up the new repo

--- a/Frontend-Angular/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend-Angular/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,27 @@
 <div class="container">
-  <div class="header">
-      <h1>You are now logged in!</h1>
-  </div>
+
+    <div>
+        <a href="/lesson-1" >
+            <img src="../../../assets/level-1.png">
+        </a>
+    </div>
+
+    <div>
+        <a href="/lesson-2" >
+            <img src="../../../assets/level-2.png">
+        </a>
+    </div>
+
+    <div>
+        <a href="/lesson-3" >
+            <img src="../../../assets/level-3.png">
+        </a>
+    </div>
+
+    <div>
+        <a href="/lesson-4" >
+            <img src="../../../assets/level-4.png">
+        </a>
+    </div>
+
 </div>
