--- a/Frontend-Angular/src/app/components/login/login.component.html
+++ b/Frontend-Angular/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="form-container">
-    <h1>Login Form!</h1>
+    <h1>Login</h1>
     <form  [formGroup] = 'loginForm' (submit)= "onLoginSubmit(loginForm.value)" autocomplete="off">
       <div class="form-group">
             <label for="username">Username</label>
