--- a/Frontend-Angular/src/app/components/register/register.component.html
+++ b/Frontend-Angular/src/app/components/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="form-container">
-  <h1>Create an account!</h1>
-  <form  [formGroup] = 'registerForm' (submit)= "onRegisterSubmit(registerForm.value)" autocomplete="off">
+    <h1>Sign Up</h1>
+    <form  [formGroup] = 'registerForm' (submit)= "onRegisterSubmit(registerForm.value)" autocomplete="off">
     <div class="form-group">
         <label for="name">Name</label>
         <input type="text" class="form-control" formControlName="name" id="name" placeholder="Enter your name">
