--- a/Frontend-Angular/src/app/components/footer/footer.component.css
+++ b/Frontend-Angular/src/app/components/footer/footer.component.css
@@ -1,11 +1,12 @@
 .footer {
     position: fixed;
-    height: 50px;
+    height: 100px;
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: #8C1AE2;
+    background-color: #F4D03F;
+    background-image: linear-gradient(132deg, #F4D03F 0%, #16A085 100%);
     color: white;
     text-align: center;
-    padding: 15px;
+    padding: 40px;
 }
