--- a/Frontend-Angular/src/app/components/navbar/navbar.component.html
+++ b/Frontend-Angular/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">POST BOOK!</a>
+<nav class="navbar navbar-expand-md">
+  <a class="navbar-brand" href="/">ABCSQL</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navabar" aria-controls="navbarsExampleDefault"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -8,7 +8,6 @@
   <div class="collapse navbar-collapse" id="navabar">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
-        <a class="nav-link" [routerLink]="['/']">Home</a>
       </li>
     </ul>
 
