--- a/Frontend-Angular/src/app/components/register/register.component.css
+++ b/Frontend-Angular/src/app/components/register/register.component.css
@@ -5,7 +5,7 @@ form {
 }
 h1 {
     text-align: center;
-    margin: 2rem;
+    margin-top: 1rem;
     color: #000;
 }
 label {
@@ -14,13 +14,14 @@ label {
 }
 
 .form-group {
-    width: 80%;
-    margin: 20px auto;
+    width: 50%;
+    margin: 10px auto;
 }
 
 button {
-    color:rgb(179, 176, 176);
-    width: 60%;
+    background-color: #FFE53B;
+    background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);
+    width: 50%;
     margin: 25px auto;
     font-weight: bold;
 }
