--- a/Frontend-Angular/src/styles.css
+++ b/Frontend-Angular/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+body{font-family: 'Permanent Marker', cursive;}
+a{color: #fff;font-size: 20px;}
+a:hover{color: #fff;}
