--- a/src/src/styles.css
+++ b/src/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 
-body{font-family: 'Permanent Marker', cursive;}
+body{font-family: 'Asap', sans-serif;}
 a{color: #fff;font-size: 20px;}
 a:hover{color: #fff;}
