--- a/src/src/app/components/home/home.component.html
+++ b/src/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home-container">
  <div>
-  <img src="../../../assets/background.jpg">
+  <img src="../../../assets/background.png">
  </div>
 </div>
