--- a/src/src/app/components/lesson1/lesson1.component.html
+++ b/src/src/app/components/lesson1/lesson1.component.html
@@ -4,10 +4,9 @@
       <div class="section">
       <h2>Lesson 1: Select Database</h2>
       <p>Welcome to ABCSQL! A game designed for learners in managing data stored in databases </p>
-      <p>Let's start by entering a SQL command that chooses the database of your choice!</p>
+      <p>Let's start by entering a SQL command that chooses the UHack database!</p>
       <div class="form-group">
-        <label >Example textarea</label>
-
+        <label> *Tip: Check the placeholder 😉</label>
         <textarea class="form-control" name="userinput" runat="server" [(ngModel)]="query" rows="1" (keyup)="sqlChanges($event)"></textarea>
         <br>
         <a href="/lesson-2" class="btn btn-success" role="button">Next Lesson</a>
@@ -17,8 +16,8 @@
 
     <div class="col abc-col">
       <div class="row">
-        <div class="coll">
-          <img id="abc-table"  src="../../../assets/Shellhacks.png" width="220" height="225">
+        <div class="col">
+          <img id="abc-table" src="../../../assets/Uhack.png" width="220" height="225">
         </div>
         <div class="col">
           <img id="abc-table" src="../../../assets/Swamphack.png" width="220" height="225">
@@ -26,7 +25,7 @@
       </div>
       <div class="row">
         <div class="col" >
-          <img id="abc-table" src="../../../assets/Uhack.png" width="220" height="225">
+          <img id="abc-table" src="../../../assets/Shellhacks.png" width="220" height="225">
         </div>
         <div class="col">
           <img id="abc-table" src="../../../assets/Mangohacks.png" width="220" height="225">
