--- a/src/src/app/components/lesson2/lesson2.component.css
+++ b/src/src/app/components/lesson2/lesson2.component.css
@@ -3,3 +3,8 @@
 .cust-btn{margin: 10px;}
 .form-control{text-transform: initial}
 .section {background: #f7f7f9; padding: 10px;margin-top: 30px;}
+.getBigger {
+    transform: scale(1);
+    background-color: #FBAB7E;
+    box-shadow: 0 0 1rem #FBAB7E;
+}
