--- a/src/src/app/components/lesson3/lesson3.component.html
+++ b/src/src/app/components/lesson3/lesson3.component.html
@@ -1,55 +1,43 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
-      <div class="section">
-        <h2>Lesson 3: Using the REPLACE Keyword </h2>
-        <p>Now we are gonna select from the database a table.
-          <br> Tip: UPDATE database.table set `column` = REPLACE(`column`, 'original', 'replacement');
-        </p>
-        <div class="form-group">
-          <label for="exampleFormControlTextarea3">Example textarea</label>
-          <textarea class="form-control" placeholder="(...) REPLACE(`column`, 'original', 'replacement');" id="exampleFormControlTextarea3" rows="1"></textarea>
-          <br>
+    <div class="row">
+        <div class="col">
+            <div class="section">
+                <h2>Lesson 3: Delete tables</h2>
+                <p> Next step is gonna be deleting a table
+                    <br> We will be using a similar query but instead of selecting now we are deleting.
+                    <br> Go ahead and delete the student's table
+                </p>
+                <div class="form-group">
+                    <textarea class="form-control" name="userinput" runat="server" [(ngModel)]="query" rows="1" (keyup)="sqlChange()"></textarea>
+                </div>
+                <a href="/lesson-2" class="btn btn-success cust-btn" role="button">Previous Lesson</a>
+                <a href="/lesson-4" class="btn btn-success cust-btn" role="button">Next Lesson</a>
+            </div>
         </div>
-        <a href="/lesson-2" class="btn btn-success cust-btn" role="button">Previous Lesson</a>
-        <a href="/lesson-4" class="btn btn-success cust-btn" role="button">Next Lesson</a>
-      </div>
-    </div>
 
-    <div class="col abc-col">
-      <h2 style="text-align:center;">Sponsors Table</h2>
-      <table id="customers">
-        <tr>
-          <th>ID</th>
-          <th>Company</th>
-          <th>Name</th>
-          <th>Email</th>
-        </tr>
-        <tr>
-          <td>1</td>
-          <td>Hooli</td>
-          <td>Gavin Belson</td>
-          <td>gavin@hooli.com</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>PiedPier</td>
-          <td>Richard Hendricks</td>
-          <td>richard@piedpiper.com</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>PiedPier</td>
-          <td>Jared “Donald” Dunn</td>
-          <td>donald@piedpiper.com</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>Aviato</td>
-          <td>Erlich Bachman</td>
-          <td>erlichb@incubator.com</td>
-        </tr>
-      </table>
+        <div class="col abc-col">
+            <div class="row">
+                <div class="col">
+                    <div class="students">
+                    <h3 style="text-align: center">Students</h3>
+                    <img id="abc-table" src="../../../assets/sql_dummy_table.png" width="220" height="225">
+                    </div>
+                </div>
+                <div class="col">
+                    <h3 style="text-align: center">Volunteers</h3>
+                    <img id="abc-table" src="../../../assets/sql_dummy_table.png" width="220" height="225">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col" >
+                    <h3 style="text-align: center">Sponsors</h3>
+                    <img id="abc-table" src="../../../assets/sql_dummy_table.png" width="220" height="225">
+              </div>
+                <div class="col">
+                    <h3 style="text-align: center">Professors</h3>
+                    <img id="abc-table" src="../../../assets/sql_dummy_table.png" width="220" height="225">
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
