minor verbiage fixes

--- a/src/src/app/components/lesson1/lesson1.component.html
+++ b/src/src/app/components/lesson1/lesson1.component.html
@@ -4,7 +4,7 @@
       <div class="section">
       <h2>Lesson 1: Select Database</h2>
       <p>Welcome to ABCSQL! A game designed for learners in managing data stored in databases </p>
-      <p>Let's start by entering a SQL command that chooses the UHack database!</p>
+      <p>Let's start by entering a SQL command that chooses the uhack database!</p>
       <div class="form-group">
         <label> *Tip: Check the placeholder 😉</label>
         <textarea class="form-control" name="userinput" runat="server" [(ngModel)]="query" rows="1" (keyup)="sqlChanges($event)"></textarea>
