--- a/src/src/app/components/lesson3/lesson3.component.html
+++ b/src/src/app/components/lesson3/lesson3.component.html
@@ -3,9 +3,9 @@
         <div class="col">
             <div class="section">
                 <h2>Lesson 3: Delete tables</h2>
-                <p> Next step is gonna be deleting a table
-                    <br> We will be using a similar query but instead of selecting now we are deleting.
-                    <br> Go ahead and delete the student's table
+                <p> Next step is gonna be deleting a table.
+                    <br> We will be using a similar query but instead of selecting, now we are deleting.
+                    <br> Go ahead and delete the student's table.
                 </p>
                 <div class="form-group">
                     <textarea class="form-control" name="userinput" runat="server" [(ngModel)]="query" rows="1" (keyup)="sqlChange()"></textarea>
