--- a/src/src/app/components/lesson4/lesson4.component.html
+++ b/src/src/app/components/lesson4/lesson4.component.html
@@ -3,12 +3,12 @@
     <div class="col">
       <div class="section">
         <h2>Lesson 4: Using the REPLACE Keyword </h2>
-        <p>Now we are gonna select from the database a table.
+        <p> LAST EXERCISE (WOHOO!) <br> One of our sponsors recently sold his startup  and our database is outdated.
+          <br>Now we are gonna select from the uhack database  the sponsors table, and then replace from the company column, Aviato by Incubator.
           <br> Tip: UPDATE database.table set `column` = REPLACE(`column`, 'original', 'replacement');
         </p>
         <div class="form-group">
-          <label for="exampleFormControlTextarea3">Example textarea</label>
-          <textarea class="form-control" placeholder="(...) REPLACE(`column`, 'original', 'replacement');" id="exampleFormControlTextarea3" rows="1"></textarea>
+          <textarea class="form-control" name="userinput" runat="server" [(ngModel)]="query" rows="1" (keyup)="sqlChange()"></textarea>
           <br>
         </div>
         <a href="/lesson-3" class="btn btn-success cust-btn" role="button">Previous Lesson</a>
@@ -45,7 +45,7 @@
         </tr>
         <tr>
           <td>4</td>
-          <td>Aviato</td>
+          <td class="aviato"><span>Aviato</span></td>
           <td>Erlich Bachman</td>
           <td>erlichb@incubator.com</td>
         </tr>
