--- a/src/app/components/lesson4/lesson4.component.html
+++ b/src/app/components/lesson4/lesson4.component.html
@@ -3,15 +3,20 @@
     <div class="col">
       <div class="section">
         <h2>Lesson 4: Using the REPLACE Keyword </h2>
-        <p> LAST EXERCISE (WOHOO!) <br> One of our sponsors recently sold his startup  and our database is outdated.
-          <br>Now we are gonna select from the uhack database  the sponsors table, and then replace from the company column, Aviato by Incubator.
-          <br> Tip: UPDATE database.table SET `column` = REPLACE(`column`, 'original', 'replacement');
+        <p> LAST EXERCISE (WOHOO!) <br> One of our sponsors recently sold his
+          startup and our database is outdated.
+          <br>Now we are gonna select from the uhack database the sponsors
+          table, and then replace from the company column, Aviato by Incubator.
+          <br> Tip: UPDATE database.table SET `column` = REPLACE(`column`,
+          'original', 'replacement');
         </p>
         <div class="form-group">
-          <textarea class="form-control" name="userinput" runat="server" [(ngModel)]="query" rows="1" (keyup)="sqlChange()"></textarea>
+          <textarea class="form-control" name="userinput" runat="server"
+            [(ngModel)]="query" rows="1" (keyup)="sqlChange()"></textarea>
           <br>
         </div>
-        <a href="/lesson-3" class="btn btn-success cust-btn" role="button">Previous Lesson</a>
+        <a href="/lesson-3" class="btn btn-success cust-btn" role="button">Previous
+          Lesson</a>
         <a href="/diploma" class="btn btn-success cust-btn" role="button">Finish</a>
       </div>
     </div>
