--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,74 +1,72 @@
 body {
-    background: rgba(240,235,215,.5);
+  background: rgba(240, 235, 215, .5);
 }
 
 .container {
-    text-align: center;
-    max-width: 100%;
-    padding-top:80px;
+  text-align: center;
+  max-width: 100%;
+  padding-top: 80px;
 }
 
 .container div {
-    position: relative;
-    display: inline-block;
-    height: 300px;
-    width: 300px;
-    overflow: hidden;
-    border-radius: 7px;
-    margin: 60px 15px;
-    transition: .1s all cubic-bezier(0.785, 0.135, 0.15, 0.86);
-    box-shadow: 0 50px 150px -20px rgba(0,0,0,.75);
+  position: relative;
+  display: inline-block;
+  height: 300px;
+  width: 300px;
+  overflow: hidden;
+  border-radius: 7px;
+  margin: 60px 15px;
+  transition: .1s all cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  box-shadow: 0 50px 150px -20px rgba(0, 0, 0, .75);
 }
 
 .container img {
-    width: 140%;
-    margin: -25% -25%;
-    min-height: 100%;
-    transition: .1s all cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  width: 140%;
+  margin: -25% -25%;
+  min-height: 100%;
+  transition: .1s all cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
 
 .container span {
-    position: absolute;
-    bottom: -20px;
-    left: 20px;
-    font-family: Arial;
-    color: rgba(255,255,255,0);
-    font-size: 1.5rem;
-    transition: .8s all cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  position: absolute;
+  bottom: -20px;
+  left: 20px;
+  font-family: Arial;
+  color: rgba(255, 255, 255, 0);
+  font-size: 1.5rem;
+  transition: .8s all cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
 
 .container span:before {
-     content: '';
-     position: absolute;
-     background: rgba(255,255,255,.1);
-     width: 50px;
-     height: 400px;
-     transform: rotate(30deg);
-     top: -40px;
-     left: -200px;
-     transition: 1s all cubic-bezier(0.785, 0.135, 0.15, 0.86);
- }
-
-.container span:hover {
-     cursor: pointer;
-     transform: scale(1.2);
-     border-radius: 10px;
-     box-shadow: 0 20px 300px -20px rgba(0,0,0,1);
+  content: '';
+  position: absolute;
+  background: rgba(255, 255, 255, .1);
+  width: 50px;
+  height: 400px;
+  transform: rotate(30deg);
+  top: -40px;
+  left: -200px;
+  transition: 1s all cubic-bezier(0.785, 0.135, 0.15, 0.86);
 }
 
-.container span:hover:before
-{
-     content: '';
-     left: 350px;
- }
+.container span:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+  border-radius: 10px;
+  box-shadow: 0 20px 300px -20px rgba(0, 0, 0, 1);
+}
+
+.container span:hover:before {
+  content: '';
+  left: 350px;
+}
 
 .container img:hover {
-    width: 100%;
-    margin: 0;
-    min-height: 100%;
+  width: 100%;
+  margin: 0;
+  min-height: 100%;
 }
 .container span:hover {
-    color: rgba(255,255,255,.8);
-    bottom: 20px;
+  color: rgba(255, 255, 255, .8);
+  bottom: 20px;
 }
-
