--- a/src/app/components/finished/finished.component.css
+++ b/src/app/components/finished/finished.component.css
@@ -1,2 +1,7 @@
-img{height: 600px;padding:20px;}
-div{text-align:center;}
+img {
+  height: 600px;
+  padding: 20px;
+}
+div {
+  text-align: center;
+}
