--- a/src/app/components/lesson4/lesson4.component.css
+++ b/src/app/components/lesson4/lesson4.component.css
@@ -1,40 +1,57 @@
-.abc-col{margin-top: 50px;}
-#abc-table{padding: 20px;}
-.cust-btn{margin: 10px;}
-.form-control{text-transform: initial}
-.section {
-    background: #f7f7f9;
-    padding: 10px;
-    margin-top: 30px;
+.abc-col {
+  margin-top: 50px;
 }
-
+#abc-table {
+  padding: 20px;
+}
+.cust-btn {
+  margin: 10px;
+}
+.form-control {
+  text-transform: initial;
+}
+.section {
+  background: #f7f7f9;
+  padding: 10px;
+  margin-top: 30px;
+}
 
 #customers {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
 }
 
-#customers td, #customers th {
-    border: 1px solid #ddd;
-    padding: 8px;
+#customers td,
+#customers th {
+  border: 1px solid #ddd;
+  padding: 8px;
 }
 
-#customers tr:nth-child(even){background-color: #f2f2f2;}
+#customers tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
 
-#customers tr:hover {background-color: #ddd;}
+#customers tr:hover {
+  background-color: #ddd;
+}
 
 #customers th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #4CAF50;
-    color: white;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4caf50;
+  color: white;
 }
 
-.replace span{visibility: hidden;
-    position: relative;}
-.replace span:after{visibility: visible;
-    position: absolute;
-    top: 0;
-    left: 0;content: 'Incubator';}
+.replace span {
+  visibility: hidden;
+  position: relative;
+}
+.replace span:after {
+  visibility: visible;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: 'Incubator';
+}
